	* optimized memory usage of torrent_info and file_storage, forcing some API changes
	  around file_storage and file_entry
	* support trackerid tracker extension
	* graceful peer disconnect mode which finishes transactions before disconnecting peers
	* support chunked encoding for web seeds
	* optimized session startup time
	* support SSL for web seeds, through all proxies
	* support extending web seeds with custom authorization and extra headers
	* settings that are not changed from the default values are not saved
	  in the session state
	* made seeding choking algorithm configurable
	* deprecated setters for max connections, max half-open, upload and download
	  rates and unchoke slots. These are now set through session_settings
	* added functions to query an individual peer's upload and download limit
	* full support for BEP 21 (event=paused)
	* added share-mode feature for improving share ratios
	* merged all proxy settings into a single one
	* improved SOCKS5 support by proxying hostname lookups
	* improved support for multi-homed clients
	* added feature to not count downloaded bytes from web seeds in stats
	* added alert for incoming local service discovery messages
	* added option to set file priorities when adding torrents
	* removed the session mutex for improved performance
	* added upload and download activity timer stats for torrents
	* made the reuse-address flag configurable on the listen socket
	* moved UDP trackers over to use a single socket
	* added feature to make asserts log to a file instead of breaking the process
	  (production asserts)
	* optimized disk I/O cache clearing
	* added feature to ask a torrent if it needs to save its resume data or not
	* added setting to ignore file modification time when loading resume files
	* support more fine-grained torrent states between which peer sources it
	  announces to
	* supports calculating sha1 file-hashes when creating torrents